# Ros2-Raspberry-pi-Smart-Car

./: .gitattributes  .gitignore  LICENSE  README.md
smart_car/: Miniconda3-latest-Linux-aarch64.sh  camera_test.py  motor_pwm.py
smart_car/opencv_env/: pyvenv.cfg
smart_car/src/smart_car_pkg/: package.xml  setup.cfg  setup.py
smart_car/src/smart_car_pkg/images/: qr_code_detector.py
smart_car/src/smart_car_pkg/scripts/: model_test.py  motor_pwm.py
smart_car/src/smart_car_pkg/smart_car_pkg/: avoid_obstacles_node.py  cmd_to_pwm_driver.py  detection_node.py  listener.py  qr_control.py  remote_control_node.py  run_with_xvfb.sh  talker.py  test_input_devices.py
