<?xml version="1.0"?>
<package format="3">
  <name>smart_car_pkg</name>
  <version>0.0.0</version>
  <description>Smart Car Package: Object Detection Node</description>
  <maintainer email="khalil@todo.todo">Khalil</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>python3-opencv</depend>
  <depend>tflite-support</depend>

  <!-- Build, export, and test dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>